--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
@@ -17,9 +18,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node src/server.js",
-    "start:dev": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server/dist/server.js",
+    "start:local": "react-scripts start",
+    "build": "npm run build:server && npm run build:app",
+    "build:app": "react-scripts build",
+    "build:server": "tsc --p server/tsconfig.server.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "bracketSpacing": true,
+    "trailingComma": "es5",
+    "arrowParens": "always",
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
