--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
@@ -53,7 +54,10 @@
     "arrowParens": "always",
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "importOrder": ["<THIRD_PARTY_MODULES>", "^[./]"],
+    "importOrder": [
+      "<THIRD_PARTY_MODULES>",
+      "^[./]"
+    ],
     "importOrderSeparation": true,
     "importOrderCaseInsensitive": true
   },
