--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
