--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-redux": "^8.0.2",
