--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
+    "@types/luxon": "^3.0.1",
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-datepicker": "^4.4.2",
@@ -17,6 +18,7 @@
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.9.4",
+    "luxon": "^3.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
