--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
+    "@types/express-sslify": "^1.2.2",
     "@types/jest": "^27.5.2",
     "@types/luxon": "^3.0.1",
     "@types/node": "^16.11.57",
@@ -22,6 +23,7 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "express-sslify": "^1.2.0",
     "firebase": "^9.9.4",
     "luxon": "^3.0.3",
     "process": "^0.11.10",
