--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@react-pdf/renderer": "^3.0.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
     "@types/express-sslify": "^1.2.2",
@@ -18,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-pdf": "^5.7.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "assert": "^2.0.0",
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
     "stream-browserify": "^3.0.0",
@@ -51,6 +52,7 @@
     "build:app": "react-scripts build",
     "build:server": "tsc --p server/tsconfig.server.json",
     "test": "react-scripts test",
+    "test:coverage": "npm test -- --env=jsdom --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -86,6 +88,7 @@
     "importOrderCaseInsensitive": true
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "prettier": "^2.7.1"
   }
